<resources>
    <string name="AD">AD magnification times</string>
    <string name="AlgorithmType">Algorithm Type：</string>
    <string name="AppId">APPID</string>
    <string name="Chinese">Chinese</string>
    <string name="Default">The default sample</string>
    <string name="DefaultSampleType">SampleType</string>
    <string name="Deutsch">Deutsch</string>
    <string name="DownLoad">DownLoad</string>
    <string name="DownLoading">DownLoading</string>
    <string name="DownLoadingSuccess">DownLoading Completes！</string>
    <string name="English">English</string>
    <string name="EnterPasswrod">Please enter password</string>
    <string name="ExportAll">Export all</string>
    <string name="ExportToday">Export today</string>
    <string name="French">Français</string>
    <string name="IDCard">IDCard：</string>
    <string name="IDChipReadFaile">Read failed. Are you sure the chip is plugged in?</string>
    <string name="IDChipReadNoMatch">ID chip does not match manufacturer!</string>
    <string name="Illegalfile">Illegal file</string>
    <string name="Italiano">Italiano</string>
    <string name="LIS">LIS</string>
    <string name="LisSwitch">Switch</string>
    <string name="Male">Male</string>
    <string name="NextStep">Please select the next step</string>
    <string name="NoSample">No Sample or sample volume insufficient!</string>
    <string name="Portugal">Português</string>
    <string name="PrintDate">Print date:</string>
    <string name="Report">Report</string>
    <string name="ResultNoSample">No Sample</string>
    <string name="ResultRushTop">Overflow</string>
    <string name="RushTop">Topping Value：</string>
    <string name="Russian">Русский</string>
    <string name="SelectSampleType">Please select the sample type</string>
    <string name="SetTime">Please set the time！</string>
    <string name="Spain">Español</string>
    <string name="SureToChangeLanguage">Sure to change the system language?</string>
    <string name="SureToDownLoad">There is a new version of the software. Are you sure to upgrade？</string>
    <string name="TCtype">T/C Type：</string>
    <string name="TestConnection">Test Connection</string>
    <string name="TestDeclaration">Declaration:the test result is liable for this specimen only!</string>
    <string name="TestFail">Fail！</string>
    <string name="TestSuccess">OK！</string>
    <string name="TestTime">Test time:</string>
    <string name="TestTime2">Test Time</string>
    <string name="Upgrade_failed">Upgrade Failed！</string>
    <string name="Upgradeing">Upgrading...</string>
    <string name="UserIDCard">Get from the ID chip</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal">Abnormal</string>
    <string name="account">Account</string>
    <string name="account_by_item">Account by item</string>
    <string name="account_by_sample">Account by sample</string>
    <string name="account_condition">Account Condition</string>
    <string name="add">Add</string>
    <string name="addChar">+</string>
    <string name="addInfo">Detailed Information</string>
    <string name="addSample">Addition of sample values：</string>
    <string name="addSampleName">Add sample name：</string>
    <string name="addSuccess">Save successful！</string>
    <string name="adminModify">Modify Administrator PIN：</string>
    <string name="admin_error">The user name or password error!</string>
    <string name="advanced">Advanced</string>
    <string name="age">Age</string>
    <string name="agerule">Age does not conform to norms.</string>
    <string name="allInfo">Please input the complete information.</string>
    <string name="allMessage">Please enter the full content!</string>
    <string name="apexInterval">Peak interval：</string>
    <string name="app_name">Fluorescence</string>
    <string name="application_date">Application Date</string>
    <string name="application_sure">Yes</string>
    <string name="application_time">Time</string>
    <string name="barCode">Product lot number：</string>
    <string name="barcode">Barcode</string>
    <string name="barcode_time">Single scan time</string>
    <string name="batchNum">Barcode：</string>
    <string name="bed_number">Bed No.</string>
    <string name="binDownload">Download reagent information</string>
    <string name="c_screen">Screen calibration</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="checkFormula">Calibration formula</string>
    <string name="checkNet">Check Net</string>
    <string name="check_identity_card">Check identity card</string>
    <string name="checknamerule">"The 'auditor' can't be more than 15 characters"</string>
    <string name="checkout">Check Out</string>
    <string name="clean_calibration">Clean Calibration</string>
    <string name="clear">clear</string>
    <string name="cloudsNetUrl">URL</string>
    <string name="cloudsSetting">Clouds Setting</string>
    <string name="coefficientSub">Segmentation factor：</string>
    <string name="connect">Connect</string>
    <string name="connectStatus">Connection Status</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting....</string>
    <string name="contentEmpty">The content cannot be empty. Please enter</string>
    <string name="count">Test Count</string>
    <string name="cowBloodTime">Blood sampling time</string>
    <string name="cowCompany">Company</string>
    <string name="cowOperator">Operator</string>
    <string name="cowSampleStatus">Sample status</string>
    <string name="dark_current_test">Collection</string>
    <string name="data">Data</string>
    <string name="dayR">Day</string>
    <string name="db_input">DB input</string>
    <string name="db_output">DB output</string>
    <string name="decimalDigits">Decimal places reserved：</string>
    <string name="defaultLotNumber">Default Lot.</string>
    <string name="delay">Delay(s)</string>
    <string name="delete">delete</string>
    <string name="delete_sample">Delete</string>
    <string name="density">Concentration values：</string>
    <string name="detectorPerson">Detection(Signature)：</string>
    <string name="detectorResult2">Detection Result</string>
    <string name="detectorSetting2">Organization</string>
    <string name="detectorUnit">Organization：</string>
    <string name="detectorUnitSetting">Organization Setting</string>
    <string name="detectorVeridct2">Detection Verdict</string>
    <string name="device_id">Device ID：</string>
    <string name="device_parameters">Device Parameters</string>
    <string name="dimension">Is it segmented：</string>
    <string name="divisionIndex">Segmentation points：</string>
    <string name="drump">Go</string>
    <string name="edit">Edit</string>
    <string name="editFaile">Modify fail！</string>
    <string name="editSuccess">Modify successfully！</string>
    <string name="edit_password">Modify Password</string>
    <string name="emptyDate">Date empty！</string>
    <string name="envTemp">Env Temp:</string>
    <string name="errorOccur">Error！</string>
    <string name="ethernetConfig">Ethernet Configuration</string>
    <string name="exit">Exit</string>
    <string name="exporSuccess">Export success！</string>
    <string name="fanSiwtch">Fan Switch</string>
    <string name="feMale">Female</string>
    <string name="feminine">Negative</string>
    <string name="figure">Figure</string>
    <string name="firmUpdate">Firmware Upgrading</string>
    <string name="firmwareversion">Firmware Version:</string>
    <string name="forbid">Operation is disabled in this state！</string>
    <string name="formula">Formula</string>
    <string name="gender">Gender</string>
    <string name="guestCode">Guest Code</string>
    <string name="hardWareVersion">HardWare Version:</string>
    <string name="hareReport">Report</string>
    <string name="hatchSwitch">Incubation Switch</string>
    <string name="hatchTemp">Incubation Temperature</string>
    <string name="hatchTime">Incubation time：</string>
    <string name="hight">Hight</string>
    <string name="hintNum">Please enter a number from 0-255 or less</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="lotNumAndName">Lot No, ItemName</string>
    <string name="maintain">Maintain</string>
    <string name="netWorkUpdate">Online Upgrading</string>
    <string name="no">No</string>
    <string name="password">Password</string>
    <string name="pwdformat">Please enter password</string>
    <string name="scanFaileForEnter">Scan failed! Please select the Lot No.!</string>
    <string name="softUpdate">Software Upgrading</string>
    <string name="system_setting">System Setting</string>
    <string name="tittle">Immunofluorescence Analyzer</string>
    <string name="user_name">User Name</string>
    <string name="ver2">Release Version:</string>
    <string name="ver22">Full Version:</string>
    <string name="ver3">Copyright © 2019-2024</string>
    <string name="ver4">Operating System: Android 5.1.1</string>
    <string name="ver5">Tel:</string>
    <string name="version">Version</string>
    <string name="warn">Warning</string>
    <string name="yes">Yes</string>
</resources>