<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/statistical_bg1_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/base_test_size_tittle" android:textColor="#ff323232" android:id="@id/tvVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="35.0dip" android:text="@string/version" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="@dimen/base_test_size_tab" android:textColor="#ff323232" android:gravity="center_vertical" android:id="@id/tvMacType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tittle" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:id="@id/tvReleaseVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/ver2" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:id="@id/tvFullVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/ver22" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:id="@id/tvSN" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="SN:" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:id="@id/tvDeviceID" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/device_id" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:id="@id/tvFirmWareVersion" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/firmwareversion" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ver3" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ver4" />
        <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center_vertical" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ver5" />
    </LinearLayout>
    <TextView android:textSize="@dimen/base_test_size_tittle" android:textColor="#ff323232" android:id="@id/tvBuild" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/version" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>