<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/statistical_bg1_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/base_test_size_tittle" android:textColor="#ff323232" android:id="@id/tvLISSetting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="35.0dip" android:text="@string/language" />
    <com.wen.fluorescence.ViewUtil.MultiLineRadioGroup android:orientation="vertical" android:id="@id/rgLanguage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbChinese" android:layout_width="178.0dip" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="English" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbEnglish" android:layout_width="178.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:button="@null" android:text="Polish" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbDeutsch" android:layout_width="178.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:button="@null" android:text="@string/Deutsch" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbRussian" android:layout_width="178.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:button="@null" android:text="@string/Russian" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip">
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbSpain" android:layout_width="178.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/Spain" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbPortugal" android:layout_width="178.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:button="@null" android:text="Turkce" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbItalia" android:layout_width="178.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:button="@null" android:text="@string/Italiano" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
            <RadioButton android:textSize="@dimen/base_test_size" android:id="@id/rbFrench" android:layout_width="178.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:button="@null" android:text="@string/French" android:drawableLeft="@drawable/account_account_condiftion_radiobutton" />
        </LinearLayout>
    </com.wen.fluorescence.ViewUtil.MultiLineRadioGroup>
    <LinearLayout android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="75.0dip" android:layout_marginBottom="50.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textSize="@dimen/base_test_size_tittle" android:textColor="@color/white" android:id="@id/btnSure" android:background="@drawable/common_button" android:layout_width="180.0dip" android:layout_height="70.0dip" android:text="@string/application_sure" />
        <Button android:textSize="@dimen/base_test_size_tittle" android:textColor="@color/white" android:id="@id/btnCancel" android:background="@drawable/common_button" android:layout_width="180.0dip" android:layout_height="70.0dip" android:layout_marginLeft="50.0dip" android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>