<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/statistical_bg1_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/base_test_size_tittle" android:textColor="#ff323232" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="35.0dip" android:text="@string/maintain" />
    <LinearLayout android:gravity="top" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/btnScreenCaliration" android:background="@drawable/hand_gaitubao_com" android:layout_width="98.0dip" android:layout_height="98.0dip" />
            <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center" android:layout_width="126.0dip" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/c_screen" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/btnEthernetSettings" android:background="@mipmap/ethernet" android:layout_width="98.0dip" android:layout_height="98.0dip" />
            <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/ethernetConfig" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip">
            <Button android:id="@id/btnSettings" android:background="@drawable/systemsetting_button" android:layout_width="98.0dip" android:layout_height="98.0dip" />
            <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/system_setting" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip">
            <Button android:id="@id/btnSoftUpdate" android:background="@drawable/software_button" android:layout_width="98.0dip" android:layout_height="98.0dip" />
            <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/softUpdate" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip">
            <Button android:id="@id/btnNetUpdate" android:background="@drawable/software_button" android:layout_width="98.0dip" android:layout_height="98.0dip" />
            <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/netWorkUpdate" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip">
            <Button android:id="@id/btnFirmUpdate" android:background="@drawable/firmware_button" android:layout_width="98.0dip" android:layout_height="98.0dip" />
            <TextView android:textSize="@dimen/base_test_size" android:textColor="#ff505050" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/firmUpdate" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="60.0dip" android:layout_marginBottom="60.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <LinearLayout android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <TextView android:textSize="@dimen/base_test_size_tittle" android:textColor="#ff505050" android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/advanced" />
            <EditText android:gravity="center" android:id="@id/etPassWord" android:background="@drawable/inputbox_normal" android:layout_width="210.0dip" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:inputType="textPassword" />
        </LinearLayout>
        <Button android:textSize="@dimen/base_test_size_tittle" android:textColor="@color/white" android:id="@id/btnSure" android:background="@drawable/common_button" android:visibility="gone" android:layout_width="178.0dip" android:layout_height="70.0dip" android:layout_marginLeft="20.0dip" android:text="@string/application_sure" />
        <Button android:textSize="@dimen/base_test_size_tittle" android:textColor="@color/white" android:id="@id/btnLogout" android:background="@drawable/common_button" android:layout_width="190.0dip" android:layout_height="70.0dip" android:layout_marginLeft="20.0dip" android:text="@string/logout" />
    </LinearLayout>
</RelativeLayout>