<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="520.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/base_test_size_tittle" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:background="@color/mlOrange" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/warn" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginTop="50.0dip" android:baselineAligned="false">
        <TextView android:textSize="@dimen/base_test_size" android:gravity="center" android:layout_gravity="center" android:id="@id/tvName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EnterPasswrod" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginTop="30.0dip" android:baselineAligned="false">
        <TextView android:textSize="@dimen/base_test_size" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" />
        <EditText android:textSize="@dimen/base_test_size" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/etPassword" android:background="@drawable/inputbox_normal" android:layout_width="300.0dip" android:layout_height="55.0dip" android:layout_marginLeft="5.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:layout_marginBottom="20.0dip">
        <Button android:textSize="@dimen/base_test_size" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@id/btnSure" android:background="@drawable/common_button" android:layout_width="170.0dip" android:layout_height="60.0dip" android:text="@string/yes" />
        <Button android:textSize="@dimen/base_test_size" android:textColor="@color/white" android:id="@id/btnCancel" android:background="@drawable/common_button" android:layout_width="170.0dip" android:layout_height="60.0dip" android:layout_marginLeft="50.0dip" android:text="@string/no" />
    </LinearLayout>
</LinearLayout>